# synapse

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
script/: checkpatch.mk  checkpatch.pl  cpplint.mk  cpplint.py
src/: Makefile.am
src/compiler/: Makefile.am  connection.synapse.h  synapse-error.cc  synapse-error.hh  synapse-file.cc  synapse-file.hh  synapse-generator.cc  synapse-generator.hh  synapse-header  synapse-header.cc  synapse-params.cc  synapse-params.hh  synapse-protoc.cc  synapse-source.cc  synapse-stream.cc  synapse-stream.hh  synapse-string.cc  synapse-string.hh
src/compiler/api/: synapse-header.cc  synapse-header.hh  synapse-source.cc  synapse-source.hh
src/compiler/ast/: Makefile.am  synapse-adaptor.cc  synapse-adaptor.hh  synapse-ast.cc  synapse-composite.cc  synapse-composite.hh  synapse-decl.cc  synapse-decl.hh  synapse-decls.cc  synapse-decls.hh  synapse-elements.hh  synapse-elements.hxx  synapse-enum.cc  synapse-enum.hh  synapse-enumeration.cc  synapse-enumeration.hh  synapse-enumerator.cc  synapse-enumerator.hh  synapse-enumerators.cc  synapse-enumerators.hh  synapse-error.cc  synapse-error.hh  synapse-field.cc  synapse-field.hh  synapse-fields.cc  synapse-fields.hh  synapse-function.cc  synapse-function.hh  synapse-include.cc  synapse-include.hh  synapse-interface.hh  synapse-label.cc  synapse-label.hh  synapse-node.hh  synapse-param.cc  synapse-param.hh  synapse-params.cc  synapse-params.hh  synapse-service.cc  synapse-service.hh  (+7 more)
src/compiler/ast/enumeration/: synapse-decl.hh  synapse-decls.hh  synapse-enumeration.cc  synapse-enumeration.hh  synapse-enumerators.cc  synapse-enumerators.hh  synapse-error.cc  synapse-error.hh  synapse-visitor.hh
src/compiler/ast/functions/: synapse-allocator.hh  synapse-dup.hh  synapse-free.hh  synapse-new.hh
src/compiler/ast/service/: synapse-decl.hh  synapse-factory.cc  synapse-factory.hh  synapse-function.cc  synapse-function.hh  synapse-service.hh
src/compiler/ast/service/allocator/: synapse-allocator.cc  synapse-allocator.hh  synapse-decl.hh  synapse-decls.hh  synapse-dup.cc  synapse-dup.hh  synapse-error.cc  synapse-error.hh  synapse-free.cc  synapse-free.hh  synapse-function.hh  synapse-new.cc  synapse-new.hh  synapse-visitor.hh
src/compiler/ast/structure/: synapse-decl.hh  synapse-decls.hh  synapse-error.cc  synapse-error.hh  synapse-fields.cc  synapse-fields.hh  synapse-structure.cc  synapse-structure.hh  synapse-visitor.hh
src/compiler/ast/types/: synapse-enumeration.cc  synapse-enumeration.hh  synapse-enumerator.hh  synapse-function.cc  synapse-function.hh  synapse-list.cc  synapse-list.hh  synapse-simple.cc  synapse-simple.hh  synapse-structure.cc  synapse-structure.hh
src/compiler/file/: synapse-header.hh  synapse-interface.hh  synapse-source.hh
src/compiler/header/: synapse-ctx_factory.cc  synapse-ctx_factory.hh  synapse-definition.cc  synapse-definition.hh  synapse-factory.cc  synapse-factory.hh  synapse-generator.hh  synapse-header.cc  synapse-header.hh  synapse-main.cc  synapse.cc  synapse.hh
src/compiler/parser/: synapse-error.cc  synapse-error.hh  synapse-file.hh  synapse-generator.hh  synapse-generator.hxx  synapse-header.cc  synapse-header.hh  synapse-interface.hh  synapse-params.cc  synapse-params.hh  synapse-source.cc  synapse-source.hh  synapse-stream.cc  synapse-stream.hh  synapse.cc  synapse.hh
src/compiler/parser/declaration/: synapse-api.cc  synapse-api.hh  synapse-declaration.cc  synapse-declaration.hh  synapse-interface.hh  synapse.cc  synapse.hh
src/compiler/parser/definition/: synapse-api.cc  synapse-api.hh  synapse-definition.cc  synapse-definition.hh  synapse-factory.cc  synapse-factory.hh  synapse-interface.hh  synapse.cc  synapse.hh
src/compiler/parser/file/: synapse-header.cc  synapse-header.hh  synapse-interface.hh  synapse-source.cc  synapse-source.hh
src/compiler/source/: Makefile.am
src/synapse-protoc/: Makefile.am  protoc-file.cc  protoc-file.hh  protoc-generator.hh  protoc.cc  synapse-generator.hh  synapse-ifile.cc  synapse-ifile.hh  synapse-main.cc
src/synapse-protoc/adaptor/: synapse-ast.cc  synapse-ast.hh  synapse-element.hh  synapse-enum.cc  synapse-enum.hh  synapse-field.cc  synapse-field.hh  synapse-function.cc  synapse-function.hh  synapse-label.cc  synapse-label.hh  synapse-struct.cc  synapse-struct.hh  synapse-visitor.hh
src/synapse-protoc/ast/: synapse-ast.cc  synapse-ast.hh  synapse-data_factory.cc  synapse-data_factory.hh  synapse-element.hh  synapse-enum.cc  synapse-enum.hh  synapse-field.cc  synapse-field.hh  synapse-function.cc  synapse-function.hh  synapse-include.cc  synapse-include.hh  synapse-label.cc  synapse-label.hh  synapse-struct.cc  synapse-struct.hh  synapse-visitor.hh
src/synapse-protoc/header/: protoc-header.hh  synapse-header.cc  synapse-header.hh  synapse-iheader.hh
src/synapse-protoc/header/adaptor/: synapse-adaptor.hh  synapse-desc.cc  synapse-desc.hh  synapse-enum.cc  synapse-enum.hh  synapse-preproc.cc  synapse-preproc.hh  synapse-service.cc  synapse-service.hh  synapse-struct.cc  synapse-struct.hh
src/synapse-protoc/source/: protoc-source.hh  synapse-isource.hh  synapse-source.cc  synapse-source.hh
src/synapse-protoc/visitor/: synapse-default.cc  synapse-default.hh  synapse-file.cc  synapse-file.hh  synapse-header.cc  synapse-header.hh  synapse-stream.cc  synapse-stream.hh  synapse.cc  synapse.hh
